--- a/src/assets/scss/pages/Setting.scss
+++ b/src/assets/scss/pages/Setting.scss
@@ -1,9 +1,8 @@
+@import 'utils/mixins.scss';
 @import 'utils/variables.scss';
 
 .setting {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+  @include page-center-layout;
   align-items: center;
   @keyframes scaleChange {
     0% {
