--- a/src/assets/scss/pages/Setting.scss
+++ b/src/assets/scss/pages/Setting.scss
@@ -6,18 +6,19 @@
   align-items: center;
   @keyframes scaleChange {
     0% {
-      opacity: 0;
       transform: scale(0.5);
+      transform: translateZ(2rem);
     }
-    10% {
-      opacity: 1;
+    30% {
       transform: scale(1);
+      transform: translateZ(0px);
     }
     90% {
       opacity: 1;
     }
     100% {
       opacity: 0;
+      display: none;
     }
   }
   animation: scaleChange 4s ease-in-out;
