--- a/src/assets/scss/elements/ingame/TopicCard.scss
+++ b/src/assets/scss/elements/ingame/TopicCard.scss
@@ -16,7 +16,7 @@
         line-height: 9.6rem;
         font-weight: $font-weight-bold;
         font-size: 5rem;
-        box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.1);
+        box-shadow: 0px 0.4rem 3rem rgba(0, 0, 0, 0.1);
 
         &--count {
           position: absolute;
