--- a/src/assets/scss/layouts/result/ResultBackground.scss
+++ b/src/assets/scss/layouts/result/ResultBackground.scss
@@ -11,7 +11,7 @@
     font-size: $font-size-2;
     padding: 3.4rem 6.4rem;
     text-align: center;
-    border-radius: 60px 60px 0 0;
+    border-radius: 6rem 6rem 0 0;
     letter-spacing: 1em;
     text-indent: 1em;
   }
