--- a/src/assets/scss/pages/Rank.scss
+++ b/src/assets/scss/pages/Rank.scss
@@ -8,5 +8,10 @@
     align-items: center;
     width: 100%;
     height: 5rem;
+    p {
+      font-size: $font-size-3;
+      font-weight: $font-weight-bold;
+      color: $color-gray-3;
+    }
   }
 }
