[ Style ] SideBar 수정

--- a/src/assets/scss/layouts/navbar/HeaderBar.scss
+++ b/src/assets/scss/layouts/navbar/HeaderBar.scss
@@ -10,6 +10,8 @@
     padding: 0 2.2rem;
     background-color: $color-white;
     box-shadow: 0 5px 40px rgba(0, 0, 0, 0.03);
+    position: relative;
+    z-index: 13;
   }
   &__logo {
     display: flex;
