[ Style ] header close 버튼 수정, button_container 수정

--- a/src/assets/scss/layouts/navbar/HeaderBar.scss
+++ b/src/assets/scss/layouts/navbar/HeaderBar.scss
@@ -9,7 +9,7 @@
     height: 6.2rem;
     padding: 0 2.2rem;
     background-color: $color-white;
-    box-shadow: 0 5px 40px rgba(0, 0, 0, 0.03);
+    box-shadow: 0 -0.5rem 4.5rem rgba(0, 0, 0, 0.08);
     position: relative;
     z-index: 13;
   }
