--- a/src/assets/scss/commons/Button.scss
+++ b/src/assets/scss/commons/Button.scss
@@ -1,4 +1,5 @@
 @import 'utils/variables.scss';
+@import 'utils/mixins.scss';
 
 .button {
   &.default {
@@ -55,5 +56,23 @@
     left: 0;
     margin: 0;
     padding: 0 1.2rem 1rem;
+  }
+
+  @include respond-to(max-xs) {
+    &--bottom {
+      width: auto;
+      position: static;
+      margin: 0;
+      padding-left: 0;
+      padding-right: 0;
+      button {
+        &:first-child {
+          margin-left: 0;
+        }
+        &:last-child {
+          margin-right: 0;
+        }
+      }
+    }
   }
 }
