[ Style ] ingame 페이지 가운데 정렬 및 기타수정

--- a/src/assets/scss/pages/Ingame.scss
+++ b/src/assets/scss/pages/Ingame.scss
@@ -2,7 +2,7 @@
 @import 'utils/variables.scss';
 
 .ingame {
-  @include page-layout;
+  @include page-center-layout;
   .textwitharrow {
     padding-top: 3.2rem;
     margin-bottom: 7rem;
