--- a/src/assets/scss/layouts/prepare/LevelBoxTop.scss
+++ b/src/assets/scss/layouts/prepare/LevelBoxTop.scss
@@ -1,10 +1,8 @@
-.level--box__top {
-}
-
 .img {
   &--container {
     position: relative;
     height: 18.4rem;
+    margin-top: 3rem;
   }
   &--box {
     position: absolute;
