[ Feature ] 드래그 방지 추가

--- a/src/assets/scss/layouts/navbar/SideBar.scss
+++ b/src/assets/scss/layouts/navbar/SideBar.scss
@@ -3,6 +3,7 @@
 .sidebar {
   @include flex-column-center;
   @include nav-sliding-time;
+  @include drag-protect;
   justify-content: space-between;
   position: absolute;
   right: 0;
