--- a/src/assets/scss/pages/Ingame.scss
+++ b/src/assets/scss/pages/Ingame.scss
@@ -3,6 +3,7 @@
 
 .ingame {
   @include page-center-layout;
+  @include drag-protect;
   .textwitharrow {
     padding-top: 3.2rem;
     margin-bottom: 7rem;
