--- a/src/assets/scss/pages/Result.scss
+++ b/src/assets/scss/pages/Result.scss
@@ -3,6 +3,7 @@
 .result {
   @include page-layout;
   &--title {
+    @include drag-protect;
     margin-bottom: 3rem;
     &:nth-of-type(1) {
       padding-top: 3.2rem;
