[ Fix ] Sidebar sidebar__bottom--title 중앙정렬로 수정

--- a/src/assets/scss/layouts/navbar/SideBar.scss
+++ b/src/assets/scss/layouts/navbar/SideBar.scss
@@ -54,6 +54,7 @@
     &--title {
       display: flex;
       align-items: center;
+      justify-content: center;
       margin-bottom: 1.2rem;
       p {
         margin-right: 0.4rem;
