[ Fix ] 스타일 수정중에 잘못 들어간 애니메이션 수정

--- a/src/assets/scss/pages/Setting.scss
+++ b/src/assets/scss/pages/Setting.scss
@@ -10,6 +10,7 @@
       transform: translateZ(2rem);
     }
     30% {
+      opacity: 1;
       transform: scale(1);
       transform: translateZ(0px);
     }
